<resources>
    <string name="app_name">GW2 Panel</string>

    <string name="title_section1">News</string>
    <string name="title_section2">Timer</string>
    <string name="title_section3">Legendary Progress</string>
    <string name="title_section4">Trading Post</string>
    <string name="title_section5">WvW Status</string>
    <string name="title_section6">Item Database</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_example">Example action</string>
    <string name="action_settings">Settings</string>

    <string name="connection_error">Check your connection and try again.</string>
    <string name="retry_button">Retry</string>

    <string name="news_placeholder1">news_textview_title</string>
    <string name="news_placeholder2">news_textview_description</string>
    <string name="news_placeholder3">news_textview_date</string>

    <string name="news_big_placeholder1">news_big_textview_title</string>
    <string name="news_big_placeholder2">news_big_textview_attribution</string>
    <string name="news_big_placeholder3">news_big_textview_post</string>

    <string name="timer_placeholder1">timer_textView_name</string>
    <string name="timer_placeholder2">timer_textView_status</string>
    <string name="timer_placeholder3">timer_textView_startTimer</string>
    <string name="timer_placeholder4">timer_textView_countTimer</string>
    <string name="timer_textview_start">Starts at</string>
    <string name="timer_textview_count">Starts in</string>
</resources>
