<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/news_big_placeholder1"
        android:id="@+id/news_big_textview_title"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:visibility="visible" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:textSize="12sp"
        android:text="@string/news_big_placeholder2"
        android:id="@+id/news_big_textview_attribution"
        android:layout_below="@+id/news_big_textview_title"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:visibility="visible" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/connection_error"
        android:id="@+id/news_big_textview_error"
        android:layout_centerVertical="true"
        android:layout_centerHorizontal="true"
        android:gravity="center_horizontal"
        android:visibility="invisible" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/retry_button"
        android:id="@+id/news_big_button_retry"
        android:layout_below="@+id/news_big_textview_error"
        android:layout_centerHorizontal="true"
        android:visibility="invisible" />

    <WebView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/webView"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/news_big_textview_attribution" />
</RelativeLayout>
